# trp

./: README.md  package.json
bindings/go/: go.mod  types.go
bindings/python/: pyproject.toml
bindings/rust/: Cargo.toml  types.rs
bindings/ts/: package.json  types.ts
codegen/go/: types.go
codegen/python/: types.py
codegen/rust/: types.rs
codegen/ts/: types.ts
specs/: trp.json
xtask/: Cargo.toml
xtask/src/: gen.rs  main.rs  openrpc.rs  resolver.rs
xtask/src/mapper/: go.rs  mod.rs  python.rs  rust.rs  ts.rs
xtask/templates/go/: types.askama
xtask/templates/python/: pyproject.askama  types.askama
xtask/templates/rust/: cargo.askama  types.askama
xtask/templates/ts/: package.askama  types.askama
