[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["TRP Contributors"]

[dependencies]
anyhow = "1"
askama = { version = "0.12", features = ["config"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
